// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api-file creates api file content for operation with no parameters or request body 1`] = `
"import { OpenApiRequestBuilder } from '@sap-cloud-sdk/core';
import { DefaultApi } from './openapi/api';


export const TestServiceApi = {
  getEntity: () => new OpenApiRequestBuilder<DefaultApi, 'getEntity'>(
    DefaultApi,
    'getEntity'
  )
};"
`;

exports[`api-file creates api file content for operation with request body 1`] = `
"import { OpenApiRequestBuilder } from '@sap-cloud-sdk/core';
import { DefaultApi } from './openapi/api';
import { Body } from './openapi/model';

export const TestServiceApi = {
  createEntity: (body: Body) => new OpenApiRequestBuilder<DefaultApi, 'createEntity'>(
    DefaultApi,
    'createEntity',
    body
  ),
  updateEntity: (id: string, body: Body) => new OpenApiRequestBuilder<DefaultApi, 'updateEntity'>(
    DefaultApi,
    'updateEntity',
    id,
    body
  )
};"
`;

exports[`api-file creates api file content for operations with parameters and no request bodies 1`] = `
"import { OpenApiRequestBuilder } from '@sap-cloud-sdk/core';
import { DefaultApi } from './openapi/api';


export const TestServiceApi = {
  getEntity: (id: string, limit?: number) => new OpenApiRequestBuilder<DefaultApi, 'getEntity'>(
    DefaultApi,
    'getEntity',
    id,
    limit
  ),
  deleteEntity: (id: string) => new OpenApiRequestBuilder<DefaultApi, 'deleteEntity'>(
    DefaultApi,
    'deleteEntity',
    id
  )
};"
`;
